# Exosky_App

./: README.md  pyproject.toml
app_interface/: colors.conf  exosky_app.py  exosky_app.qrc  exosky_app.spec  exosky_app_rc.py  main.qml
backend/: exosky_backend.py  messy_coordinate_transformation.ipynb
resources/: colors.conf  style_rc.py
