[tool.poetry]
name = "Exosky_App"
version = "0.0.0" # version is managed by azure pipeline
description = "Repository for Exosky Challenge"
authors = ["Winnie"]
readme = "README.md"
packages = [{ include = "backend" }]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[build-system]
requires = ["poetry-core>=1.0.0", "python > 3.11"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.13.2"
numpy = "^2.2.2"
astropy = "^7.0.1"
pandas = "^2.2.3"
astroquery = "^0.4.9.post1"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
keyring = "^25.6.0"
scikit-image = "^0.25.1"
pyside6 = "^6.8.2.1"
opencv-python = "^4.11.0.86"
plotly = "^6.0.0"

